# g3test

./: .gitignore  CMakeLists.txt
Data/Shaders/: Basic.frag  Basic.vert  EdgeDetect.frag  FlatTexture.frag  FlatTexture.vert  Grid.frag  Pixelate.frag  TextureTunnel.frag  UBODummy.vert
cmake/: FindGLFW.cmake
src/Application/: GLFWApplication.cpp  GLUTApplication.cpp  GLUTApplication.hpp  QTApplication.cpp  QTApplication.hpp  SFMLApplication.cpp  SFMLApplication.hpp
src/Application/QTWidgets/: GLWidget.cpp  GLWidget.hpp  Widget.cpp  Widget.hpp
src/Debug/: console.cpp
src/Main/: Application.cpp  Application.hpp  Filesystem.cpp  Filesystem.hpp  GLFWApplication.hpp  GLUTApplication.cpp  GLUTApplication.hpp  Globals.cpp  Globals.hpp  Main.cpp  ResourceManager.cpp  ResourceManager.hpp  SFMLApplication.cpp
src/Misc/: SharedUniforms.hpp
src/OpenGL/: Buffer.cpp  Buffer.hpp  Framebuffer.cpp  Framebuffer.hpp  GLMatrixStack.hpp  OpenGL.cpp  OpenGL.hpp  Program.cpp  Program.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.hpp
src/Renderable/: Cube.cpp  Cube.hpp  DemoScene.cpp  DemoScene.hpp  ErrorMesh.cpp  ErrorMesh.hpp  TextureQuad.cpp  TextureQuad.hpp
src/ShaderBinding/: ShaderManager.hpp  SharedUniforms.cpp  SharedUniforms.hpp
